--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
     >
       <div class="carousel-inner">
         <div class="carousel-item active slide-img">
-          <img src="img/slider-1.jpg" class="d-block w-100" alt="Reload" />
+          <img src="img/slider-1.webp" class="d-block w-100" alt="Reload" />
           <p class="image-text">
             Hi, I'M Qamar <span class="slide-text">A</span>bbas
           </p>
@@ -114,7 +114,7 @@
     </div>
     <!-- Main body wokr here  -->
     <div class="container main-container">
-      <img src="/img/img (2).jpg" alt="Reload" />
+      <img src="/img/img (2).webp" alt="Reload" />
       <div class="content-main">
         <h2>Hi, Welcome to My Portfolio</h2>
         <p class="text-main">
@@ -149,21 +149,21 @@
     </div>
     <div class="card-group container card-div">
       <div class="card card-img">
-        <img src="img/img (4).jpg" class="card-img-top" alt="..." />
+        <img src="img/img (4).webp" class="card-img-top" alt="..." />
         <div class="card-body">
           <h2 class="card-title card-h5">Qamar Abbas</h2>
           <p class="card-text">Developer</p>
         </div>
       </div>
       <div class="card card-img">
-        <img src="img/img (6).jpg" class="card-img-top" alt="..." />
+        <img src="img/img (6).webp" class="card-img-top" alt="..." />
         <div class="card-body">
           <h2 class="card-title">John Doe</h2>
           <p class="card-text">Designer</p>
         </div>
       </div>
       <div class="card card-img">
-        <img src="img/img (9).jpg" class="card-img-top" alt="..." />
+        <img src="img/img (9).webp" class="card-img-top" alt="..." />
         <div class="card-body">
           <h2 class="card-title">Jonathan Mark</h2>
           <p class="card-text">Photography</p>
